--- a/Evaluaciones/Proyecto Final/proyecto-esteban/app/styles.css
+++ b/Evaluaciones/Proyecto Final/proyecto-esteban/app/styles.css
@@ -1,10 +1,43 @@
-input {
-    border: 1px solid #279;
-    border-radius: 4px;
-    line-height: 20px;
+.global-header {
+    background: linear-gradient(160deg, #bdf 0, #08c 100%);
+    border-radius: 6px;
+}
+
+.global-footer {
+    background: linear-gradient(160deg, #ddd 0, #777 100%);
+    border-radius: 6px;
+    margin-top: 24px;
+    padding: 2px 6px;
+}
+
+.global-title {
+    display: inline-block;
+    margin: 16px 20px 8px 20px;
+}
+
+.menu {
+    list-style: none;
+    position: relative;
+    border-radius: 0 0 6px 6px;
+    background: linear-gradient(160deg, #00c 0, #006 100%);
     font-size: 16px;
-    padding: 6px 8px;
-    width: 100%;
+}
+
+.menu-item {
+    display: inline-block;
+    position: relative;
+}
+
+.menu-link {
+    display: inline-block;
+    color: #dde;
+    padding: 4px 12px;
+    border-radius: 6px;
+}
+
+.menu-link:hover {
+    color: #eef;
+    background: linear-gradient(160deg, #007 0, #00a 100%);
 }
 
 input:valid {
@@ -50,70 +83,75 @@ input:invalid,
     padding-right: 16px;
 }
 
-.lista .mensaje-temp {
-    margin-bottom: 20px;
-}
-
-.controles button {
-    margin-right: 4px;
-}
-
-.controles button:last-child {
-    margin-right: 0;
-}
-
-.acciones button {
-    margin-right: 4px;
-}
-
-.acciones button:last-child {
-    margin-right: 0;
-}
-
-.etiqueta {
-    display: inline-block;
-    padding-right: 4px;
-    color: #888899;
-}
-
-.valor {
-    display: inline-block;
-}
-
-.nombre {
-    text-transform: capitalize;
-}
-
-.numero {
-    text-align: right;
-}
-
 .login-container {
     text-align: center;
 }
 
 .login {
+    max-width: 500px;
     display: inline-block;
-    padding: 15px;
     text-align: left;
-}
-
-.login .title {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.login .etiqueta-valor {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.login .etiqueta {
-    display: block;
 }
 
 .login .error {
     margin-top: 12px;
+}
+
+.number {
+    text-align: right;
+}
+
+.no-aplica {
+    color: #999;
+    text-align: center;
+    font-size: 85%;
+}
+
+.table>tbody>tr>td.no-aplica {
+    vertical-align: middle;
+}
+
+.fixed-label {
+    padding-top: 7px;
+}
+
+.readonly-field {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #777;
+    background-color: #f5f5f5;
+    background-image: none;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+
+.acciones button,
+.controles button {
+    margin-right: 4px;
+}
+
+.acciones button:last-child,
+.controles button:last-child {
+    margin-right: 0;
+}
+
+.home .controles {
+    margin-top: 12px;
+}
+
+.resumen-container {
+    display: inline-block;
+}
+
+.resumen-content {
+    border-radius: 6px;
+    border: 1px solid #279;
+    padding: 12px;
 }
 
 .loader {
